--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@lexical/list": "^0.7.4",
-    "@lexical/react": "^0.7.4",
-    "@lexical/rich-text": "^0.7.4",
-    "@lexical/selection": "^0.7.4",
-    "@lexical/utils": "^0.7.4",
+    "@lexical/list": "^0.7.5",
+    "@lexical/react": "^0.7.5",
+    "@lexical/rich-text": "^0.7.5",
+    "@lexical/selection": "^0.7.5",
+    "@lexical/utils": "^0.7.5",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "lexical": "^0.7.4",
+    "idb-keyval": "^6.2.0",
+    "lexical": "^0.7.5",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
